--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
   <body>
-<header>
-  <h1>COMMUNITY SCIENCE MUSEUM</h1>
-</header>
-<main>
-  <h2>Visit unleash</h2>
-</main>
-<Footer>
-  <p>contact us</p>
-</Footer>
-
+    <header>
+      <h1>COMMUNITY SCIENCE MUSEUM</h1>
+    </header>
+    <main>
+      <h2>Visit unleash</h2>
+    </main>
+    <footer>
+      <p>contact us</p>
+    </footer>
   </body>
 </html>
