--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <h1>COMMUNITY SCIENCE MUSEUM</h1>
     </header>
     <main>
-      <h2>Visit unleash</h2>
+      <h2>Visit us</h2>
+      <h3>ghgkhgkhgkhg</h3>
     </main>
     <footer>
       <p>contact us</p>
