--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       <h2>Visit us</h2>
-      <h3>ghgkhgkhgkhg</h3>
+      <h3>Easily plan your most exciting visit ever.</h3>
     </main>
     <footer>
       <p>contact us</p>
