--- a/index.html
+++ b/index.html
@@ -2,23 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover a world of wonder and exploration at the Community Science Museum – where young minds and families embark on a journey of curiosity and discovery. Immerse yourself in interactive exhibits, captivating experiments, and hands-on learning that sparks the imagination. Explore our vibrant and engaging website to ignite your love for science. Plan your visit today and unleash the scientist within."
+      content="Discover a world of wonder and exploration at the Community Science Museum where young minds and families embark on a journey of curiosity and discovery. Immerse yourself in interactive exhibits, captivating experiments, and hands-on learning that sparks the imagination. Explore our vibrant and engaging website to ignite your love for science. Plan your visit today and unleash the scientist within."
     />
 
     <title>Community Science Museum</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
+
+
   <body>
     <header>
       <h1>COMMUNITY SCIENCE MUSEUM</h1>
     </header>
+    <img src="assets/png/Circuit Technology Logo.png" alt="">
     <main>
       <h2>Visit us</h2>
-      <h3>Easily plan your most exciting visit ever.</h3>
+      <h3>Easily plan your most exciting visit ever. </h3>
     </main>
+
+
+    
     <footer>
       <p>contact us</p>
     </footer>
