--- a/index.html
+++ b/index.html
@@ -11,21 +11,50 @@
 
     <title>Community Science Museum</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/header.css">
   </head>
 
 
   <body>
-    <header>
-      <h1>COMMUNITY SCIENCE MUSEUM</h1>
+    <header >
+<nav >
+  <div class="logo">
+      <img src="assets/png/Desktop logo Ai High.png" alt="logo">
+</div>  
+
+ <div class="nav-items"> 
+  <div class="top-row">
+
+        <input type="text" class="search-input" placeholder="Search...">
+        <p>Groups</p>
+        <p>Take Part</p>
+        
+      </div> 
+      <div class="bottom-row
+      ">
+        <p>Plan Visit</p>
+        <p>Exhibitions</p>
+        <p>Collections</p>
+        <p>Tickets</p>
+    </div>
+</div>
+
+
+
+
+    </nav>
     </header>
-    <img src="assets/png/Circuit Technology Logo.png" alt="">
+
+
+
     <main>
+
       <h2>Visit us</h2>
       <h3>Easily plan your most exciting visit ever. </h3>
     </main>
 
 
-    
+
     <footer>
       <p>contact us</p>
     </footer>
