working on main event part

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Community Science Museum</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
+    <link rel="stylesheet" href="assets/css/buttons.css" />
   </head>
 
   <body>
@@ -38,7 +39,25 @@
     </header>
 
     <main>
-      <h2>Visit us</h2>
+      <div class="mainevent">
+        <div class="entermain">
+          <h1>Professor of Aeronautics</h1>
+        </div>
+
+        <div class="top-row">
+          <div class="image-container">
+            <img
+              src="assets/images/scientific-2040795_1280.jpg"
+              alt="Professor inspecting a spaceshuttle"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="button">
+        <p>Tickets</p>
+      </div>
+
       <h3>Easily plan your most exciting visit ever.</h3>
     </main>
 
