--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
           <h1>Professor of Aeronautics</h1>
         </div>
 
-        <div class="top-row">
-          <div class="image-container">
-            <img
-              src="assets/images/scientific-2040795_1280.jpg"
-              alt="Professor inspecting a spaceshuttle"
-            />
-          </div>
+        <div class="event-img">
+          <img
+            src="assets/images/scientific-2040795_1280.jpg"
+            alt="Professor inspecting a spaceshuttle"
+          />
         </div>
       </div>
 
