--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     </header>
 
     <main>
+      <img
+        src="assets/images/scott-webb-102825.jpg"
+        alt="Colourful front of muesum"
+      />
       <div class="mainevent">
         <div class="entermain">
           <h1>Professor of Aeronautics</h1>
@@ -49,6 +53,62 @@
             src="assets/images/scientific-2040795_1280.jpg"
             alt="Professor inspecting a spaceshuttle"
           />
+        </div>
+      </div>
+      <div>
+        <h3>Explore together</h3>
+        <p>
+          Come join us at the Community Science Museum where we’re committed to
+          making science accessible to all. Over the course of human history,
+          science has developed from our early understanding of fire, wind,
+          water, and earth to exploring everything from galaxies far away to the
+          very building blocks of life itself.
+        </p>
+      </div>
+      <div class="collection">
+        <div class="collection-imgs">
+          <img
+            src="assets/images/billetto-editorial-334686.jpg"
+            alt="Boy using VR/glasses"
+          />
+          <img src="assets/images/heart-2607178_1920.jpg" alt="Heart display" />
+          <img src="assets/images/andrew-ruiz-348421.jpg" alt="Austronaut" />
+          <img
+            src="assets/images/mammoth-1257288_1920.jpg"
+            alt="Mammoth Skeleton"
+          />
+        </div>
+
+        <div class="collection-tags">
+          <a href="collections.html">Robotics and AI</a>
+          <a href="collections.html">Biology and Medicine</a>
+          <a href="collections.html">Cosmology</a>
+          <a href="collections.html">Evolution</a>
+        </div>
+      </div>
+      <div>
+        <h3>our aim</h3>
+        <p>
+          The aim of our museum is to create a space where everyone can
+          experience the wonders of our discoveries and perhaps even ignite a
+          lifelong passion to continue the exploration of the world around us.
+        </p>
+        <p>
+          We believe science should not be confined to the textbook, but brought
+          to live through exhibits. This is why we have over 1000 different
+          exhibits on the many varied subjects of science to explore. Many of
+          these exhibits are designed for you to interact with and play around
+          to see science come to life (apart from the dinosaur exhibits – they
+          only come to life at night when everyone’s gone home).
+        </p>
+      </div>
+      <div>
+        <div>
+          <img
+            src="assets/images/reading-2762010_1280.jpg"
+            alt="Little boy reading book."
+          />
+          <div><h2>Young Stars Club</h2></div>
         </div>
       </div>
 
