--- a/exhibitions.html
+++ b/exhibitions.html
@@ -37,5 +37,51 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="exhibition">
+        <div class="exhibition-img">
+          <img
+            src="assets/images/scientific-2040795_1280.jpg"
+            alt="Professor inspecting a spaceshuttle"
+          />
+        </div>
+        <div class="enterexhibition">
+          <h1>Night in the Museum</h1>
+        </div>
+      </div>
+
+      <div>
+        <h3>Explore together</h3>
+        <p>
+          Come join us at the Community Science Museum where we’re committed to
+          making science accessible to all. Over the course of human history,
+          science has developed from our early understanding of fire, wind,
+          water, and earth to exploring everything from galaxies far away to the
+          very building blocks of life itself.
+        </p>
+      </div>
+      <div class="collection">
+        <div class="collection-imgs">
+          <img
+            src="assets/images/billetto-editorial-334686.jpg"
+            alt="Boy using VR/glasses"
+          />
+          <img src="assets/images/heart-2607178_1920.jpg" alt="Heart display" />
+          <img src="assets/images/andrew-ruiz-348421.jpg" alt="Austronaut" />
+          <img
+            src="assets/images/mammoth-1257288_1920.jpg"
+            alt="Mammoth Skeleton"
+          />
+        </div>
+
+        <div class="collection-tags">
+          <a href="collections.html">Robotics and AI</a>
+          <a href="collections.html">Biology and Medicine</a>
+          <a href="collections.html">Cosmology</a>
+          <a href="collections.html">Evolution</a>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
