exhibition scaling done

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -43,6 +43,7 @@
           <img
             src="assets/images/scientific-2040795_1280.jpg"
             alt="Professor inspecting a spaceshuttle"
+            class="cropped-image"
           />
         </div>
         <div class="enterexhibition">
