adding more to exhibition page

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -50,7 +50,28 @@
           <h1>Night in the Museum</h1>
         </div>
       </div>
-
+      <div>
+        <h3>Young Stars Club</h3>
+        <p>
+          Come join us at the Community Science Museum where we’re committed to
+          making science accessible to all. Over the course of human history,
+          science has developed from our early understanding of fire, wind,
+          water, and earth to exploring everything from galaxies far away to the
+          very building blocks of life itself.
+        </p>
+      </div>
+      <div class="exhibition">
+        <div class="exhibition-img">
+          <img
+            src="assets/images/scientific-2040795_1280.jpg"
+            alt="Professor inspecting a spaceshuttle"
+            class="cropped-image"
+          />
+        </div>
+        <div class="enterexhibition">
+          <h1>Night in the Museum</h1>
+        </div>
+      </div>
       <div>
         <h3>Explore together</h3>
         <p>
@@ -61,6 +82,7 @@
           very building blocks of life itself.
         </p>
       </div>
+
       <div class="collection">
         <div class="collection-imgs">
           <img
@@ -80,6 +102,18 @@
           <a href="collections.html">Biology and Medicine</a>
           <a href="collections.html">Cosmology</a>
           <a href="collections.html">Evolution</a>
+        </div>
+      </div>
+      <div class="exhibition">
+        <div class="exhibition-img">
+          <img
+            src="assets/images/scientific-2040795_1280.jpg"
+            alt="Professor inspecting a spaceshuttle"
+            class="cropped-image"
+          />
+        </div>
+        <div class="enterexhibition">
+          <h1>Night in the Museum</h1>
         </div>
       </div>
     </main>
