front cover img sizing

--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
     </header>
 
     <main>
-      <img
-        src="assets/images/scott-webb-102825.jpg"
-        alt="Colourful front of muesum"
-      />
+      <div class="cover">
+        <img
+          src="assets/images/scott-webb-102825.jpg"
+          alt="Colourful front of muesum"
+          class="cropped-image"
+        />
+      </div>
       <div class="mainevent">
         <div class="entermain">
           <h1>Professor of Aeronautics</h1>
