--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <img
             src="assets/images/scientific-2040795_1280.jpg"
             alt="Professor inspecting a spaceshuttle"
+            class="event-cropped-img"
           />
         </div>
       </div>
