Info box styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           />
         </div>
       </div>
-      <div>
+      <div class="info-box">
         <h3>Explore together</h3>
         <p>
           Come join us at the Community Science Museum where we’re committed to
@@ -102,7 +102,7 @@
       </div>
   
    
-      <div>
+      <div class="info-box">
         <h3>our aim</h3>
         <p>
           The aim of our museum is to create a space where everyone can
