Young Cupdatelub position

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
         <a href="collections.html">Cosmology</a>
         <a href="collections.html">Evolution</a>
       </div>
-  
-   
+
       <div class="info-box">
         <h3>our aim</h3>
         <p>
@@ -120,20 +119,14 @@
       </div>
 
       <div class="club">
-        <div class="club-img">
+        <div class="club-box">
           <img
             src="assets/images/reading-2762010_1280.jpg"
-            alt="Little boy reading book." 
-          /> </div>
-          <div class="club-enter"><h2>Young Stars Club</h2></div>
+            alt="Little boy reading book."
+          />
         </div>
+        <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
       </div>
-
-      <div class="button">
-        <p>Tickets</p>
-      </div>
-
-      <h3>Easily plan your most exciting visit ever.</h3>
     </main>
 
     <footer>
