--- a/drafts.html
+++ b/drafts.html
@@ -35,7 +35,13 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="button">
+        <p>Tickets</p>
+      </div>
+
+      <h3>Easily plan your most exciting visit ever.</h3>
+    </main>
     <footer></footer>
   </body>
 </html>
