collection row improved

--- a/index.html
+++ b/index.html
@@ -59,73 +59,81 @@
           />
         </div>
       </div>
-      <div class="info-box">
-        <h3>Explore together</h3>
-        <p>
-          Come join us at the Community Science Museum where we’re committed to
-          making science accessible to all. Over the course of human history,
-          science has developed from our early understanding of fire, wind,
-          water, and earth to exploring everything from galaxies far away to the
-          very building blocks of life itself.
-        </p>
-      </div>
-
-      <div class="grid-container">
-        <img
-          src="assets/images/billetto-editorial-334686.jpg"
-          alt="Boy using VR/glasses"
-          class="img"
-        />
-
-        <img
-          src="assets/images/heart-2607178_1920.jpg"
-          alt="Heart display"
-          class="img"
-        />
-
-        <img
-          src="assets/images/andrew-ruiz-348421.jpg"
-          alt="Astronaut"
-          class="img"
-        />
-
-        <img
-          src="assets/images/mammoth-1257288_1920.jpg"
-          alt="Mammoth Skeleton"
-          class="img"
-        />
-
-        <a href="collections.html">Robotics and AI</a>
-        <a href="collections.html">Biology and Medicine</a>
-        <a href="collections.html">Cosmology</a>
-        <a href="collections.html">Evolution</a>
-      </div>
-
-      <div class="info-box">
-        <h3>our aim</h3>
-        <p>
-          The aim of our museum is to create a space where everyone can
-          experience the wonders of our discoveries and perhaps even ignite a
-          lifelong passion to continue the exploration of the world around us.
-        </p>
-        <p>
-          We believe science should not be confined to the textbook, but brought
-          to live through exhibits. This is why we have over 1000 different
-          exhibits on the many varied subjects of science to explore. Many of
-          these exhibits are designed for you to interact with and play around
-          to see science come to life (apart from the dinosaur exhibits – they
-          only come to life at night when everyone’s gone home).
-        </p>
-      </div>
-
-      <div class="club">
-        <div class="club-box">
-          <img
-            src="assets/images/reading-2762010_1280.jpg"
-            alt="Little boy reading book."
-          />
+      <div class="page-container">
+        <div class="info-box">
+          <h3>Explore together</h3>
+          <p>
+            Come join us at the Community Science Museum where we’re committed
+            to making science accessible to all. Over the course of human
+            history, science has developed from our early understanding of fire,
+            wind, water, and earth to exploring everything from galaxies far
+            away to the very building blocks of life itself.
+          </p>
         </div>
-        <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
+
+        <div class="grid-container">
+          <div>
+            <img
+              src="assets/images/billetto-editorial-334686.jpg"
+              alt="Boy using VR/glasses"
+              class="img"
+            />
+          </div>
+          <div>
+            <img
+              src="assets/images/heart-2607178_1920.jpg"
+              alt="Heart display"
+              class="img"
+            />
+          </div>
+          <div>
+            <img
+              src="assets/images/andrew-ruiz-348421.jpg"
+              alt="Astronaut"
+              class="img"
+            />
+          </div>
+          <div>
+            <img
+              src="assets/images/mammoth-1257288_1920.jpg"
+              alt="Mammoth Skeleton"
+              class="img"
+            />
+          </div>
+
+          <a href="collections.html">Robotics and AI</a>
+          <a href="collections.html">Biology and Medicine</a>
+          <a href="collections.html">Cosmology</a>
+          <a href="collections.html">Evolution</a>
+        </div>
+
+        <div class="info-box">
+          <h3>our aim</h3>
+          <p>
+            The aim of our museum is to create a space where everyone can
+            experience the wonders of our discoveries and perhaps even ignite a
+            lifelong passion to continue the exploration of the world around us.
+          </p>
+          <p>
+            We believe science should not be confined to the textbook, but
+            brought to live through exhibits. This is why we have over 1000
+            different exhibits on the many varied subjects of science to
+            explore. Many of these exhibits are designed for you to interact
+            with and play around to see science come to life (apart from the
+            dinosaur exhibits – they only come to life at night when everyone’s
+            gone home).
+          </p>
+        </div>
+
+        <div class="club">
+          <div class="club-box">
+            <img
+              src="assets/images/reading-2762010_1280.jpg"
+              alt="Little boy reading book."
+            />
+          </div>
+          <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
+        </div>
       </div>
     </main>
 
