--- a/collections.html
+++ b/collections.html
@@ -18,21 +18,22 @@
   <body>
     <header>
       <nav>
-        <div class="logo">
-          <img src="assets/png/Desktop logo Ai High.png" alt="logo" />
-        </div>
+        <a href="index.html">
+          <div class="logo">
+            <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+        ></a>
 
         <div class="nav-items">
           <div class="top-row">
             <input type="text" class="search-input" placeholder="Search..." />
-            <p>Groups</p>
-            <p>Take Part</p>
+            <a href="groups.html">Groups</a>
+            <a href="join.html"> Take part</a>
           </div>
           <div class="bottom-row">
-            <p>Plan Visit</p>
-            <p>Exhibitions</p>
-            <p>Collections</p>
-            <p>Tickets</p>
+            <a href="visit.html">Plan Visit</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="collections.html">Collectionst</a>
+            <a href="tickets.html">Tickets</a>
           </div>
         </div>
       </nav>
