--- a/tickets.html
+++ b/tickets.html
@@ -10,11 +10,10 @@
     />
 
     <title>Community Science Museum</title>
-    <link href="assets/css/styles.css" rel="stylesheet" />
+    <link href="assets/css/drafts.css" rel="stylesheet" />
+    <!--MAKE SURE TO UPDATE STYLESHEET-->
     <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/buttons.css" />
   </head>
-
   <body>
     <header>
       <nav>
@@ -38,5 +37,82 @@
         </div>
       </nav>
     </header>
+    <main>
+      <form id="ticket-form">
+        <input type="radio" id="free" name="ticket-type" value="free" />
+        <label for="free">Community Science Museum</label>
+
+        <input
+          type="radio"
+          id="exhibition1"
+          name="ticket-type"
+          value="exhibition1"
+        />
+        <label for="exhibition1">Night in the museum</label>
+
+        <input
+          type="radio"
+          id="exhibition2"
+          name="ticket-type"
+          value="exhibition2"
+        />
+        <label for="exhibition2">Energetica Exhibition</label>
+
+        <input
+          type="radio"
+          id="exhibition3"
+          name="ticket-type"
+          value="exhibition3"
+        />
+        <label for="exhibition3">Professor of Aeronautics</label>
+
+        <div class="step" id="step-1">
+          <label for="day">Select Day:</label>
+          <select id="day" name="day">
+            <option value="Tuesday">Tuesday</option>
+            <option value="Wednesday">Wednesday</option>
+            <option value="Thursday">Thursday</option>
+            <option value="Friday">Friday</option>
+            <option value="Saturday">Saturday</option>
+            <option value="Sunday">Sunday</option>
+          </select>
+        </div>
+
+        <div class="step" id="step-2">
+          <label for="time">Select Time:</label>
+          <select id="time" name="time">
+            <optgroup label="Exhibition 1">
+              <option value="21:00">21:00</option>
+            </optgroup>
+
+            <optgroup label="Exhibition 2">
+              <option value="11:00">11:00</option>
+              <option value="12:00">12:00</option>
+            </optgroup>
+
+            <optgroup label="Exhibition 3">
+              <option value="11:00">11:00</option>
+              <option value="15:00">15:00</option>
+            </optgroup>
+          </select>
+        </div>
+
+        <div class="step" id="step-3">
+          <label for="ticket-category">Select Ticket Category:</label>
+          <select id="ticket-category" name="ticket-category">
+            <option value="adult">Adult (150 NOK)</option>
+            <option value="child">Child (70 NOK)</option>
+          </select>
+          <label for="quantity">Quantity:</label>
+          <input type="number" id="quantity" name="quantity" min="1" required />
+        </div>
+        <div class="step" id="step-4">
+          <a href="checkout.html" class="checkout-button"
+            >Proceed to Checkout</a
+          >
+        </div>
+      </form>
+    </main>
+    <footer></footer>
   </body>
 </html>
