--- a/visit.html
+++ b/visit.html
@@ -38,5 +38,14 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="cover">
+        <img
+          src="assets/images/scott-webb-102825.jpg"
+          alt="Colourful front of muesum"
+          class="cropped-image"
+        />
+      </div>
+    </main>
   </body>
 </html>
