--- a/collections.html
+++ b/collections.html
@@ -46,6 +46,17 @@
           class="cropped-image"
         />
       </div>
+      <div class="page-container">
+        <div class="club">
+          <div class="club-box">
+            <img
+              src="assets/images/reading-2762010_1280.jpg"
+              alt="Little boy reading book."
+            />
+          </div>
+          <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
