--- a/groups.html
+++ b/groups.html
@@ -46,6 +46,33 @@
           class="cropped-image"
         />
       </div>
+      <div class="page-container">
+        <div class="cover">
+          <div class="exhibition-img">
+            <img
+              src="assets/images/andrew-ruiz-348421.jpg"
+              alt="Professor inspecting a spaceshuttle"
+              class="cropped-image"
+            />
+          </div>
+          <div class="info-box">
+            <h3>our aim</h3>
+            <p>
+              The aim of our museum is to create a space where everyone can
+              experience the wonders of our discoveries and perhaps even ignite a
+              lifelong passion to continue the exploration of the world around us.
+            </p>
+            <p>
+              We believe science should not be confined to the textbook, but
+              brought to live through exhibits. This is why we have over 1000
+              different exhibits on the many varied subjects of science to
+              explore. Many of these exhibits are designed for you to interact
+              with and play around to see science come to life (apart from the
+              dinosaur exhibits – they only come to life at night when everyone’s
+              gone home).
+            </p>
+          </div>
+      </div>
     </main>
   </body>
 </html>
