--- a/visit.html
+++ b/visit.html
@@ -39,12 +39,41 @@
       </nav>
     </header>
     <main>
-      <div class="cover">
-        <img
-          src="assets/images/scott-webb-102825.jpg"
-          alt="Colourful front of muesum"
-          class="cropped-image"
-        />
+      <div class="page-container">
+        <div class="info-box">
+          <h3>our aim</h3>
+          <div>
+            <p>Location</p>
+            <p>Opening hours</p>
+            <p>Monday - Closed</p>
+            <p>Tuesday-Thursday: 10:00 - 16:00</p>
+            <p>Friday: 10:00 - 19:00</p>
+            <p>Saturday: 09:00 - 16:00</p>
+            <p>Sunday: 09:00 - 13:00</p>
+          </div>
+        </div>
+        <div class="cover">
+          <!-- without margin-->
+          <div class="exhibition-img">
+            <img
+              src="assets/images/celso-405219.jpg"
+              alt="Professor inspecting a spaceshuttle"
+              class="cropped-image"
+            />
+          </div>
+        </div>
+        <div class="info-box">
+          <h3>our aim</h3>
+          <div>
+            <p>Location</p>
+            <p>Opening hours</p>
+            <p>Monday - Closed</p>
+            <p>Tuesday-Thursday: 10:00 - 16:00</p>
+            <p>Friday: 10:00 - 19:00</p>
+            <p>Saturday: 09:00 - 16:00</p>
+            <p>Sunday: 09:00 - 13:00</p>
+          </div>
+        </div>
       </div>
     </main>
   </body>
