--- a/tickets.html
+++ b/tickets.html
@@ -13,6 +13,7 @@
     <link href="assets/css/drafts.css" rel="stylesheet" />
     <!--MAKE SURE TO UPDATE STYLESHEET-->
     <link rel="stylesheet" href="assets/css/header.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <header>
