working on media queries tablet 1

--- a/collections.html
+++ b/collections.html
@@ -13,6 +13,7 @@
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
+    <link rel="stylesheet" href="assets/css/tablet.css">
   </head>
 
   <body>
@@ -48,28 +49,28 @@
       </div>
       <div class="page-container">
         <div class="grid-container">
-          <div>
+          <div class="img1">
             <img
               src="assets/images/billetto-editorial-334686.jpg"
               alt="Boy using VR/glasses"
               class="img"
             />
           </div>
-          <div>
+          <div class="img2">
             <img
               src="assets/images/heart-2607178_1920.jpg"
               alt="Heart display"
               class="img"
             />
           </div>
-          <div>
+          <div class="img3">
             <img
               src="assets/images/andrew-ruiz-348421.jpg"
               alt="Astronaut"
               class="img"
             />
           </div>
-          <div>
+          <div class="img4">
             <img
               src="assets/images/mammoth-1257288_1920.jpg"
               alt="Mammoth Skeleton"
@@ -77,10 +78,10 @@
             />
           </div>
   
-          <a href="collections.html">Robotics and AI</a>
-          <a href="collections.html">Biology and Medicine</a>
-          <a href="collections.html">Cosmology</a>
-          <a href="collections.html">Evolution</a>
+          <a href="collections.html" class="link1">Robotics and AI</a>
+          <a href="collections.html" class="link2">Biology and Medicine</a>
+          <a href="collections.html" class="link3">Cosmology</a>
+          <a href="collections.html" class="link4">Evolution</a>
         </div>
         <div class="cover">
           <div class="exhibition-img">
