mobile query on collection and adding stylesheets

--- a/drafts.html
+++ b/drafts.html
@@ -12,6 +12,8 @@
     <title>Community Science Museum</title>
     <link href="assets/css/drafts.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
+    <link rel="stylesheet" href="assets/css/tablet.css" />
+    <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
   <body>
     <header>
