--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>Community Science Museum</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/buttons.css" />
+    <link rel="stylesheet" href="assets/css/buttons.css" />    <link rel="stylesheet" href="assets/css/tablet.css">
+    <link rel="stylesheet" href="assets/css/mobile.css">
   </head>
 
   <body>
@@ -72,41 +73,42 @@
           </p>
         </div>
 
-        <div class="grid-container">
-          <div>
-            <img
-              src="assets/images/billetto-editorial-334686.jpg"
-              alt="Boy using VR/glasses"
-              class="img"
-            />
+        <div class="page-container">
+          <div class="grid-container">
+            <div class="img1">
+              <img
+                src="assets/images/billetto-editorial-334686.jpg"
+                alt="Boy using VR/glasses"
+                class="img"
+              />
+            </div>
+            <div class="img2">
+              <img
+                src="assets/images/heart-2607178_1920.jpg"
+                alt="Heart display"
+                class="img"
+              />
+            </div>
+            <div class="img3">
+              <img
+                src="assets/images/andrew-ruiz-348421.jpg"
+                alt="Astronaut"
+                class="img"
+              />
+            </div>
+            <div class="img4">
+              <img
+                src="assets/images/mammoth-1257288_1920.jpg"
+                alt="Mammoth Skeleton"
+                class="img"
+              />
+            </div>
+    
+            <a href="collections.html" class="link1">Robotics and AI</a>
+            <a href="collections.html" class="link2">Biology and Medicine</a>
+            <a href="collections.html" class="link3">Cosmology</a>
+            <a href="collections.html" class="link4">Evolution</a>
           </div>
-          <div>
-            <img
-              src="assets/images/heart-2607178_1920.jpg"
-              alt="Heart display"
-              class="img"
-            />
-          </div>
-          <div>
-            <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Astronaut"
-              class="img"
-            />
-          </div>
-          <div>
-            <img
-              src="assets/images/mammoth-1257288_1920.jpg"
-              alt="Mammoth Skeleton"
-              class="img"
-            />
-          </div>
-
-          <a href="collections.html">Robotics and AI</a>
-          <a href="collections.html">Biology and Medicine</a>
-          <a href="collections.html">Cosmology</a>
-          <a href="collections.html">Evolution</a>
-        </div>
 
         <div class="info-box">
           <h3>our aim</h3>
