--- a/tickets.html
+++ b/tickets.html
@@ -14,6 +14,8 @@
     <!--MAKE SURE TO UPDATE STYLESHEET-->
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/tablet.css" />
+    <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
   <body>
     <header>
