--- a/visit.html
+++ b/visit.html
@@ -13,6 +13,8 @@
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
+    <link rel="stylesheet" href="assets/css/tablet.css" />
+    <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
 
   <body>
