Hambuerger attemt and media nav bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <header>
-      <nav>
+      <nav class="desktop-nav">
         <a href="index.html">
           <div class="logo">
             <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
@@ -38,6 +38,31 @@
           </div>
         </div>
       </nav>
+      <nav class="mobile-nav">
+        <div>
+      <a href="index.html">
+        <div class="logo">
+          <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+      ></a>
+     
+     </div> <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+          <div>
+            <div>
+              <ul> <input type="text" class="search-input" placeholder="Search..." />
+                <li><a href="visit.html">Plan Visit</a></li>
+                <li><a href="exhibitions.html">Exhibitions</a></li>
+                <li><a href="collections.html">Collectionst</a></li>
+                <li><a href="groups.html">Groups</a></li>
+                <li><a href="join.html"> Take part</a></li>
+                <li><a href="tickets.html">Tickets</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div></nav>
     </header>
 
     <main>
