plan your visit first box

--- a/visit.html
+++ b/visit.html
@@ -43,15 +43,19 @@
     <main>
       <div class="page-container">
         <div class="info-box">
-          <h3>our aim</h3>
-          <div>
-            <p>Location</p>
-            <p>Opening hours</p>
-            <p>Monday - Closed</p>
-            <p>Tuesday-Thursday: 10:00 - 16:00</p>
-            <p>Friday: 10:00 - 19:00</p>
-            <p>Saturday: 09:00 - 16:00</p>
-            <p>Sunday: 09:00 - 13:00</p>
+          <h3>Plan your visit</h3>
+          <div class="box-paragraph">
+            <div class="paragraph-l">
+              <p>Location</p>
+            </div>
+            <div class="paragraph-r">
+              <p>Opening hours</p>
+              <p>Monday - Closed</p>
+              <p>Tuesday-Thursday: 10:00 - 16:00</p>
+              <p>Friday: 10:00 - 19:00</p>
+              <p>Saturday: 09:00 - 16:00</p>
+              <p>Sunday: 09:00 - 13:00</p>
+            </div>
           </div>
         </div>
         <div class="cover">
