--- a/collections.html
+++ b/collections.html
@@ -93,20 +93,14 @@
             />
           </div>
           <div class="info-box">
-            <h3>our aim</h3>
+            <h3>Biology and Medicine</h3>
             <p>
-              The aim of our museum is to create a space where everyone can
-              experience the wonders of our discoveries and perhaps even ignite a
-              lifelong passion to continue the exploration of the world around us.
+              From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.
             </p>
+            <p>For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicillin and the first heart transplant.</p>
             <p>
-              We believe science should not be confined to the textbook, but
-              brought to live through exhibits. This is why we have over 1000
-              different exhibits on the many varied subjects of science to
-              explore. Many of these exhibits are designed for you to interact
-              with and play around to see science come to life (apart from the
-              dinosaur exhibits – they only come to life at night when everyone’s
-              gone home).
+
+              Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.
             </p>
           </div>
         <div class="club">
