--- a/visit.html
+++ b/visit.html
@@ -43,13 +43,13 @@
     <main>
       <div class="page-container">
         <div class="info-box">
-          <h3>Plan your visit</h3>
+          <h2>Plan your visit</h2>
           <div class="box-paragraph">
             <div class="paragraph-l">
-              <p>Location</p>
+              <h3>Location</h3>
             </div>
             <div class="paragraph-r">
-              <p>Opening hours</p>
+              <h3>Opening hours</h3>
               <p>Monday - Closed</p>
               <p>Tuesday-Thursday: 10:00 - 16:00</p>
               <p>Friday: 10:00 - 19:00</p>
@@ -69,15 +69,31 @@
           </div>
         </div>
         <div class="info-box">
-          <h3>our aim</h3>
           <div>
-            <p>Location</p>
-            <p>Opening hours</p>
-            <p>Monday - Closed</p>
-            <p>Tuesday-Thursday: 10:00 - 16:00</p>
-            <p>Friday: 10:00 - 19:00</p>
-            <p>Saturday: 09:00 - 16:00</p>
-            <p>Sunday: 09:00 - 13:00</p>
+            <h3>Admission</h3>
+            <p>
+              The entrance is free for all. There are guided tours of the museum
+              that leave every hour. These tours are 70 NOK per person and
+              include a handy printed guide of the museum. If you would like to
+              organise a guided tour for your group of 6 or more people, please
+              contact us to arrange the tour.
+            </p>
+            <h3>Accessibility</h3>
+            <p>
+              The museum has wheelchair accessibility ramps. It also has audio
+              guides and braille display signs for the visually impaired.
+            </p>
+            <h3>Food and drink</h3>
+            <p>
+              There is a café attached to the museum where you can get light
+              lunches, soft drinks, coffee, snacks and more.
+            </p>
+            <h3>Shop</h3>
+            <p>
+              Our shop offers a range of memorabilia from the museum as well as
+              great gifts and activity packs that allow you to continue to
+              explore science even after you’ve left the museum.
+            </p>
           </div>
         </div>
       </div>
