fixing syntax issues

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -93,7 +93,8 @@
         <div class="enterexhibition">
           <h1>Professor of Aeronautics</h1>
         </div>
-      </div><div class="page-container">
+      </div>
+      <div class="page-container">
       <div class="info-box">
         <h3>Explore together</h3>
         <p>
@@ -140,9 +141,9 @@
           <a href="collections.html" class="link2">Biology and Medicine</a>
           <a href="collections.html" class="link3">Cosmology</a>
           <a href="collections.html" class="link4">Evolution</a>
-        </div></div>
+        </div>
     
     </main>
-    <footer></footer>
+    <footer> contact</footer>
   </body>
 </html>
