--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <title>Community Science Museum</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/buttons.css" />    <link rel="stylesheet" href="assets/css/tablet.css">
-    <link rel="stylesheet" href="assets/css/mobile.css">
+    <link rel="stylesheet" href="assets/css/buttons.css" />
+    <link rel="stylesheet" href="assets/css/tablet.css" />
+    <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
 
   <body>
@@ -40,29 +41,35 @@
       </nav>
       <nav class="mobile-nav">
         <div>
-      <a href="index.html">
-        <div class="logo">
-          <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
-      ></a>
-     
-     </div> <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-          <div>
+          <a href="index.html">
+            <div class="logo">
+              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+          ></a>
+        </div>
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler" />
+          <div class="hamburger"><div></div></div>
+          <div class="menu">
             <div>
-              <ul> <input type="text" class="search-input" placeholder="Search..." />
-                <li><a href="visit.html">Plan Visit</a></li>
-                <li><a href="exhibitions.html">Exhibitions</a></li>
-                <li><a href="collections.html">Collectionst</a></li>
-                <li><a href="groups.html">Groups</a></li>
-                <li><a href="join.html"> Take part</a></li>
-                <li><a href="tickets.html">Tickets</a></li>
-              </ul>
+              <div>
+                <ul>
+                  <input
+                    type="text"
+                    class="search-input"
+                    placeholder="Search..."
+                  />
+                  <li><a href="visit.html">Plan Visit</a></li>
+                  <li><a href="exhibitions.html">Exhibitions</a></li>
+                  <li><a href="collections.html">Collectionst</a></li>
+                  <li><a href="groups.html">Groups</a></li>
+                  <li><a href="join.html"> Take part</a></li>
+                  <li><a href="tickets.html">Tickets</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div></nav>
+      </nav>
     </header>
 
     <main>
@@ -99,6 +106,7 @@
         </div>
 
         <div class="page-container">
+          <!-- is this necessary??-->
           <div class="grid-container">
             <div class="img1">
               <img
@@ -128,39 +136,41 @@
                 class="img"
               />
             </div>
-    
+
             <a href="collections.html" class="link1">Robotics and AI</a>
             <a href="collections.html" class="link2">Biology and Medicine</a>
             <a href="collections.html" class="link3">Cosmology</a>
             <a href="collections.html" class="link4">Evolution</a>
           </div>
 
-        <div class="info-box">
-          <h3>our aim</h3>
-          <p>
-            The aim of our museum is to create a space where everyone can
-            experience the wonders of our discoveries and perhaps even ignite a
-            lifelong passion to continue the exploration of the world around us.
-          </p>
-          <p>
-            We believe science should not be confined to the textbook, but
-            brought to live through exhibits. This is why we have over 1000
-            different exhibits on the many varied subjects of science to
-            explore. Many of these exhibits are designed for you to interact
-            with and play around to see science come to life (apart from the
-            dinosaur exhibits – they only come to life at night when everyone’s
-            gone home).
-          </p>
-        </div>
-
-        <div class="club">
-          <div class="club-box">
-            <img
-              src="assets/images/reading-2762010_1280.jpg"
-              alt="Little boy reading book."
-            />
+          <div class="info-box">
+            <h3>our aim</h3>
+            <p>
+              The aim of our museum is to create a space where everyone can
+              experience the wonders of our discoveries and perhaps even ignite
+              a lifelong passion to continue the exploration of the world around
+              us.
+            </p>
+            <p>
+              We believe science should not be confined to the textbook, but
+              brought to live through exhibits. This is why we have over 1000
+              different exhibits on the many varied subjects of science to
+              explore. Many of these exhibits are designed for you to interact
+              with and play around to see science come to life (apart from the
+              dinosaur exhibits – they only come to life at night when
+              everyone’s gone home).
+            </p>
           </div>
-          <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
+
+          <div class="club">
+            <div class="club-box">
+              <img
+                src="assets/images/reading-2762010_1280.jpg"
+                alt="Little boy reading book."
+              />
+            </div>
+            <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
+          </div>
         </div>
       </div>
     </main>
