--- a/groups.html
+++ b/groups.html
@@ -12,8 +12,9 @@
     <title>Community Science Museum</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/buttons.css" />    <link rel="stylesheet" href="assets/css/tablet.css">
-    <link rel="stylesheet" href="assets/css/mobile.css">
+    <link rel="stylesheet" href="assets/css/buttons.css" />
+    <link rel="stylesheet" href="assets/css/tablet.css" />
+    <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
 
   <body>
@@ -60,8 +61,9 @@
             <h3>our aim</h3>
             <p>
               The aim of our museum is to create a space where everyone can
-              experience the wonders of our discoveries and perhaps even ignite a
-              lifelong passion to continue the exploration of the world around us.
+              experience the wonders of our discoveries and perhaps even ignite
+              a lifelong passion to continue the exploration of the world around
+              us.
             </p>
             <p>
               We believe science should not be confined to the textbook, but
@@ -69,10 +71,11 @@
               different exhibits on the many varied subjects of science to
               explore. Many of these exhibits are designed for you to interact
               with and play around to see science come to life (apart from the
-              dinosaur exhibits – they only come to life at night when everyone’s
-              gone home).
+              dinosaur exhibits – they only come to life at night when
+              everyone’s gone home).
             </p>
           </div>
+        </div>
       </div>
     </main>
   </body>
