fixing more syntax issues

--- a/collections.html
+++ b/collections.html
@@ -13,8 +13,8 @@
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
-    <link rel="stylesheet" href="assets/css/tablet.css">
-    <link rel="stylesheet" href="assets/css/mobile.css">
+    <link rel="stylesheet" href="assets/css/tablet.css" />
+    <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
 
   <body>
@@ -78,7 +78,7 @@
               class="img"
             />
           </div>
-  
+
           <a href="collections.html" class="link1">Robotics and AI</a>
           <a href="collections.html" class="link2">Biology and Medicine</a>
           <a href="collections.html" class="link3">Cosmology</a>
@@ -95,22 +95,33 @@
           <div class="info-box">
             <h3>Biology and Medicine</h3>
             <p>
-              From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.
+              From micro-organisms to the human body, major breakthroughs in
+              biology are offering us unique insights into the great wonders of
+              the tiny world.
             </p>
-            <p>For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicillin and the first heart transplant.</p>
             <p>
-
-              Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.
+              For many people their life expectancy is much longer and their
+              quality of life much improved, thanks to the growth of our
+              understanding of medicine. Over a series of exhibits we explore
+              the history of medicine and take a look at some major
+              breakthroughs including the discovery of penicillin and the first
+              heart transplant.
+            </p>
+            <p>
+              Many of our great medicinal discoveries have come not only from
+              the lab, but also from observing animals in the wild. Often our
+              fellow creatures have beat us to it.
             </p>
           </div>
-        <div class="club">
-          <div class="club-box">
-            <img
-              src="assets/images/reading-2762010_1280.jpg"
-              alt="Little boy reading book."
-            />
+          <div class="club">
+            <div class="club-box">
+              <img
+                src="assets/images/reading-2762010_1280.jpg"
+                alt="Little boy reading book."
+              />
+            </div>
+            <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
           </div>
-          <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
         </div>
       </div>
     </main>
