--- a/exhibitions.html
+++ b/exhibitions.html
@@ -19,27 +19,29 @@
 
   <body>
     <header>
-      <nav>
-        <a href="index.html">
-          <div class="logo">
-            <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
-        ></a>
+      <div class="desktop-nav">
+        <nav>
+          <a href="index.html">
+            <div class="logo">
+              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+          ></a>
 
-        <div class="nav-items">
-          <div class="top-row">
-            <input type="text" class="search-input" placeholder="Search..." />
+          <div class="nav-items">
+            <div class="top-row">
+              <input type="text" class="search-input" placeholder="Search..." />
 
-            <a href="groups.html">Groups</a>
-            <a href="join.html"> Take part</a>
+              <a href="groups.html">Groups</a>
+              <a href="join.html"> Take part</a>
+            </div>
+            <div class="bottom-row">
+              <a href="visit.html">Plan Visit</a>
+              <a href="exhibitions.html">Exhibitions</a>
+              <a href="collections.html">Collectionst</a>
+              <a href="tickets.html">Tickets</a>
+            </div>
           </div>
-          <div class="bottom-row">
-            <a href="visit.html">Plan Visit</a>
-            <a href="exhibitions.html">Exhibitions</a>
-            <a href="collections.html">Collectionst</a>
-            <a href="tickets.html">Tickets</a>
-          </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
     <main>
       <div class="cover">
