--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     <header>
       <div class="desktop-nav">
         <nav>
-          <a href="index.html">
-            <div class="logo">
-              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
-          ></a>
+          <div class="logo-space">
+            <a href="index.html">
+              <div class="logo">
+                <img
+                  src="assets/png/Desktop logo Ai High.png"
+                  alt="logo"
+                /></div
+            ></a>
+          </div>
 
           <div class="nav-items">
             <div class="top-row">
