--- a/tickets.html
+++ b/tickets.html
@@ -19,23 +19,61 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="index.html">
-          <div class="logo">
-            <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
-        ></a>
-
-        <div class="nav-items">
-          <div class="top-row">
-            <input type="text" class="search-input" placeholder="Search..." />
-            <a href="groups.html">Groups</a>
-            <a href="join.html"> Take part</a>
+      <div class="desktop-nav">
+        <nav>
+          <div class="logo-space">
+            <a href="index.html">
+              <div class="logo">
+                <img
+                  src="assets/png/Desktop logo Ai High.png"
+                  alt="logo"
+                /></div
+            ></a>
           </div>
-          <div class="bottom-row">
-            <a href="visit.html">Plan Visit</a>
-            <a href="exhibitions.html">Exhibitions</a>
-            <a href="collections.html">Collectionst</a>
-            <a href="tickets.html">Tickets</a>
+
+          <div class="nav-items">
+            <div class="top-row">
+              <input type="text" class="search-input" placeholder="Search..." />
+              <a href="groups.html">Groups</a>
+              <a href="join.html"> Take part</a>
+            </div>
+            <div class="bottom-row">
+              <a href="visit.html">Plan Visit</a>
+              <a href="exhibitions.html">Exhibitions</a>
+              <a href="collections.html">Collectionst</a>
+              <a href="tickets.html">Tickets</a>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <nav class="mobile-nav">
+        <div>
+          <a href="index.html">
+            <div class="logo">
+              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+          ></a>
+        </div>
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler" />
+          <div class="hamburger"><div></div></div>
+          <div class="menu">
+            <div>
+              <div>
+                <ul>
+                  <input
+                    type="text"
+                    class="search-input"
+                    placeholder="Search..."
+                  />
+                  <li><a href="visit.html">Plan Visit</a></li>
+                  <li><a href="exhibitions.html">Exhibitions</a></li>
+                  <li><a href="collections.html">Collectionst</a></li>
+                  <li><a href="groups.html">Groups</a></li>
+                  <li><a href="join.html"> Take part</a></li>
+                  <li><a href="tickets.html">Tickets</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
