--- a/tickets.html
+++ b/tickets.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta
       name="description"
       content="Discover a world of wonder and exploration at the Community Science Museum where young minds and families embark on a journey of curiosity and discovery. Immerse yourself in interactive exhibits, captivating experiments, and hands-on learning that sparks the imagination. Explore our vibrant and engaging website to ignite your love for science. Plan your visit today and unleash the scientist within."
     />
 
     <title>Community Science Museum</title>
-    <link href="assets/css/drafts.css" rel="stylesheet" />
-    <!--MAKE SURE TO UPDATE STYLESHEET-->
+    <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/buttons.css" />
     <link rel="stylesheet" href="assets/css/tablet.css" />
     <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
+
   <body>
     <header>
       <div class="desktop-nav">
