map and style added

--- a/visit.html
+++ b/visit.html
@@ -85,6 +85,7 @@
           <div class="box-paragraph">
             <div class="paragraph-l">
               <h3>Location</h3>
+              <p>Havnegata 13, 4306 Sandnes</p>
             </div>
             <div class="paragraph-r">
               <h3>Opening hours</h3>
@@ -99,11 +100,10 @@
         </div>
         <div class="cover">
           <!-- without margin-->
-          <div class="exhibition-img">
+          <div class="map-img">
             <img
-              src="assets/images/celso-405219.jpg"
-              alt="Professor inspecting a spaceshuttle"
-              class="cropped-image"
+              src="assets/images/Map Community Museum.png"
+              alt="Map of location for the community science museum"
             />
           </div>
         </div>
