add button to visit

--- a/visit.html
+++ b/visit.html
@@ -84,6 +84,7 @@
           <h2>Plan your visit</h2>
           <div class="box-paragraph">
             <div class="paragraph-l">
+              <a href="tickets.html" class="button">Tickets</a>
               <h3>Location</h3>
               <p>Havnegata 13, 4306 Sandnes</p>
             </div>
