more ticket styling

--- a/tickets.html
+++ b/tickets.html
@@ -85,9 +85,7 @@
           <div class="form-container">
             <div class="img1">
               <input type="radio" id="free" name="ticket-type" value="free" />
-              <label for="free" class="ticket-option"
-                >Community Science Museum</label
-              >
+              <label for="free" class="ticket-option">Museum Entrance</label>
             </div>
             <div class="img2">
               <input
