--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
       </div>
       <div class="mainevent">
         <div class="entermain">
-          <h1>Professor of Aeronautics</h1>
+          <h1>
+            <a href="exhibitions.html">Professor of Aeronautics</a>
+          </h1>
         </div>
 
         <div class="event-img">
@@ -101,6 +103,7 @@
           />
         </div>
       </div>
+
       <div class="page-container">
         <div class="info-box">
           <h3>Explore together</h3>
