--- a/collections.html
+++ b/collections.html
@@ -130,6 +130,7 @@
               class="cropped-image"
             />
           </div>
+        </div>
           <div class="info-box">
             <h3>Biology and Medicine</h3>
             <p>
